/*
 * $Id: ChangeLog,v 1.4873 2006/03/18 22:37:28 likewolf Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2006-03-18 20:30 UTC-0300 Luiz Rafael Culik<luiz at xharbour.com.br>
  * contrib/libnf/getenvrn.c
    ! Fixes to FT_GETE() to work under windows platform
  * source/ct/screen2.prg
    ! fixed SAYSCREEN() to work properly on linux, fixed Provided by Mario

2006-03-19 01:38 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * source/vm/dbgentry.c
    ! Codeblock tracing is ON by default.

2006-03-18 12:43 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * source/vm/hash.c
    * Fixed typo in HB_FUNC( HCOPY ) - reported by Hannes Ziegler

2006-03-17 02:15 UTC+0100 Francesco Saverio Giudice <info/at/fsgiudice.com>
  + xharbour/source/rtl/regexrpl.prg
    + New function HB_REGEXREPLACE()
      Syntax: hb_RegexReplace( cRegex, cString, cReplace,
                               lCaseSensitive, lNewLine, nMaxMatches,
                               nGetMatch ) --> cReturn
  + xharbour/tests/regexrpl.prg
    + Sample tests

  + xharbour/source/rtl/Makefile
  + xharbour/makefile.bc
  + xharbour/makefile.dc
  + xharbour/makefile.gc
  + xharbour/makefile.wc
  + xharbour/makefile.vc
  + xharbour/makefile.pc
  + xharbour/hrbdll.bc
  + xharbour/hrbdll.dc
  + xharbour/hrbdll.gc
  + xharbour/hrbdll.wc
  + xharbour/hrbdll.vc
  + xharbour/hrbdll.pc
    + added regexrpl.prg

  + xharbour/include/hbextern.ch
    + added HB_REGEXREPLACE, HB_CRYPT, HB_DECRYPT

2006-03-15 23:55 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * source/rtl/gtwin/gtwin.c
    * modified Alt key handling.

2006-03-14 22:35 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * source/vm/cmdarg.c
    ! Fixed missing external b_MouseEnable in C++ compilation mode

2006-03-14 08:35 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * source/rtl/tbrowse.prg